Correcting center alignment of navigation bullets
Navigation bullets are now always centered regardless the number of
bullets

--- a/skin/frontend/base/default/css/bubble/slideshow.css
+++ b/skin/frontend/base/default/css/bubble/slideshow.css
@@ -2,11 +2,14 @@
     position: relative;
 }
 
+.bs-nav-wrapper {
+    position: relative;
+    top: -30px;
+}
+
 .bs-nav {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    margin: 0;
+    position: relative;
+    margin: 0 auto;
     padding: 0;
 }
 
